--- a/langstyle/ui/resource/langstyle.css
+++ b/langstyle/ui/resource/langstyle.css
@@ -11,6 +11,11 @@ a
 	text-decoration:none;
 }
 
+button
+{
+	line-height: 22px;
+}
+
 .hidden
 {
 	display:none;
@@ -189,6 +194,7 @@ a
 {
 	width:100%;
 	text-align:center;
+	height: 20px;
 }
 
 .form input
