--- a/langstyle/ui/resource/langstyle.css
+++ b/langstyle/ui/resource/langstyle.css
@@ -2,6 +2,7 @@
 body
 {
 	margin:0;
+	font-family: 'Lucida Grande', sans-serif,'Lucida Sans Unicode', Helvetica, Arial, Verdana;
 }
 
 a
@@ -11,9 +12,19 @@ a
 	text-decoration:none;
 }
 
-button
+input[type='submit'], input[type='button']
 {
-	line-height: 22px;
+	color: #FFF;
+	font-size: 16px;
+	line-height: 16px;
+	height:30px;
+	padding: 0 10px 0 10px;
+	border-radius: 5px;
+	border-style:solid;
+	background-color: #7C0;
+	border-color: #8bd426 #67ae05 #508800;
+	vertical-align:middle;
+	cursor:pointer;
 }
 
 .hidden
@@ -29,8 +40,9 @@ button
 
 .logo-text
 {
-	font-size:2.0em;
+	font-size:larger;
 	color:#56CD56;
+	font-family:Cursive;
 }
 .header
 {
