--- a/langstyle/ui/resource/langstyle.css
+++ b/langstyle/ui/resource/langstyle.css
@@ -196,21 +196,32 @@ ol
 
 .form
 {
-	width:500px;	
-	margin-top:20px;
+	width:90%;
+	max-width: 400px;
+	margin:20px 5% 0 5%;
 }
-
 .form label
 {
 	display: block;
+}
+.form .fieldLabel
+{
 	text-align:right;
 	float: left;
-	width: 150px;
-	padding-right:5px;
+	width: 32%;
+	margin-right:1%;
 }
 .form .fieldLabel:after
 {
 	content: ":";
+}
+.form .filedInput
+{
+	height: 30px;
+	width: 98%;
+	font-size: 16px;
+	padding-left: 1%;
+	margin-bottom: 5px;
 }
 
 .form .validation
@@ -218,23 +229,38 @@ ol
 	width:100%;
 	text-align:center;
 	height: 20px;
+	margin:2px 0 2px 0;
 }
-
-.form input
-{
-	width:200px;
-}
-
 .formBottom
 {
-	padding: 10px 0 0 155px;
-	width:200px;
 	text-align:center;
 }
 
-.formBottom button
+.form .formButton
 {
-	width: 100px;
+	width: 100%;
+}
+
+.form .fileWrapper
+{
+	width: 100%;
+    height: 30px;
+    overflow: hidden;
+    position: relative;
+}
+.form .fileWrapper input[type="file"]
+{
+	font-size: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0;
+}
+.form .fileWrapper .fileButton
+{
+	display: inline-block;
+    width: 100%;
+    height: 30px;
 }
 
 .register-in-login, .login-in-register
